# huan-ui

./: .gitignore  DEPENDENCIES.md  LICENSE  README.md  hermes_log.md  package-lock.json  package.json
.claude/: launch.json
chatlog/: 2026-04-14.md
config/: currentSession.txt
huan-ui/: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BUGS.md  HERMES.md  LICENSE  ROADMAP.md  SPRINTS.md  TESTING.md  requirements.txt
huan-ui/api/: auth.py  config.py  helpers.py  llm_config.py  models.py  routes.py  startup.py  state_sync.py  streaming.py  workspace.py
huan-ui/static/: boot.js  commands.js  index.html  llm-config.js  messages.js  panels.js
huan-ui/tests/: conftest.py  test_auth_sessions.py  test_sprint12.py  test_sprint15.py  test_sprint16.py  test_sprint19.py  test_sprint23.py  test_sprint27.py  test_sprint29.py  test_sprint32.py  test_sprint4.py  test_sprint6.py  test_sprint8.py  test_tls_support.py
huan-ui/user/: .active_character
huan-ui/webui/: settings.json  workspaces.json
src/: history.html  huanhuan-animate-v2.webm  huanhuan-animate.webm  index.html  main.js  setup.html
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/default-characters/huanhuan/: config.json
src-tauri/default-characters/test/: config.json
src-tauri/default-characters/wally/: config.json
src-tauri/default-characters/xuebao/: config.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: chroma_key_black.py  minimax_image_gen.py  stt.py  stt.swift  stt_server.py
src-tauri/src/: lib.rs  main.rs
(+89 files in other folders)
